made swagger documentation for task handlers
